[tool.poetry]
name = "dotg"
version = "0.1.0"
description = "Decoding on Tanner Graphs"
authors = ["Brendan-Reid1991 <brendan.reid1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
stim = "^1.11.0"
PyMatching = "^2.1.0"
ldpc = "^0.1.50"
pytest-cov = "^4.1.0"
pathos = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
mypy = "^1.4.1"
autopep8 = "^2.0.2"
black = "^23.7.0"
ipykernel = "^6.25.2"

[tool.pylint.MASTER]
ignore-paths = '^tests/dotg/.*$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
